[package]
name = "memoffset"
version = "0.5.1"
authors = ["Gilad Naaman <gilad.naaman@gmail.com>"]
description = "offset_of functionality for Rust structs."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Gilnaa/memoffset"
keywords = ["mem", "offset", "offset_of", "offsetof"]
categories = ["no-std"]

[build-dependencies]
rustc_version = "0.2.3"
